Mini fix with `overflow: hidden`

--- a/src/pages/Faq/Item/Item.module.scss
+++ b/src/pages/Faq/Item/Item.module.scss
@@ -13,7 +13,6 @@
 .answer {
   font-size: 14px;
   display: block;
-  overflow: hidden;
   max-width: 1010px;
   max-height: none;
   margin: 0 0 0 42px;
